[package]
name = "generate-wasm"
version = "0.1.0"
authors = ["Leo Wang <alin.runlin@gmail.com>"]
description = "A sample project with generate wasm file"
license = "MIT"
repository = "https://github.com/wangrunlin/generate-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
